src/grammar/.antlr/HLangParser.py
# Generated from c:/Users/admin/Desktop/PPL_Assignment/hlang-compiler/src/grammar/HLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HLangParser ( Parser ):

    grammarFileName = "HLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'break'", "'const'", "'continue'", 
                     "'else'", "'false'", "'float'", "'for'", "'func'", 
                     "'if'", "'in'", "'int'", "'let'", "'return'", "'string'", 
                     "'true'", "'void'", "'while'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'='", "':'", "'->'", 
                     "'>>'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
                     "';'", "'.'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BREAK", "CONST", "CONTINUE", 
                      "ELSE", "FALSE", "FLOAT", "FOR", "FUNC", "IF", "IN", 
                      "INT", "LET", "RETURN", "STRING", "TRUE", "VOID", 
                      "WHILE", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQ", 
                      "NE", "LT", "LE", "GT", "GE", "AND", "OR", "NOT", 
                      "ASSIGN", "COLON", "ARROW", "PIPELINE", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
                      "COMMA", "SEMICOLON", "DOT", "INTLITERAL", "FLOATLITERAL", 
                      "STRINGLITERAL", "ID", "COMMENT", "BLOCK_COMMENT", 
                      "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_constDecl = 1
    RULE_funcDecl = 2
    RULE_paramList = 3
    RULE_param = 4
    RULE_type = 5
    RULE_functionType = 6
    RULE_atomicType = 7
    RULE_blockStmt = 8
    RULE_stmt = 9
    RULE_varDecl = 10
    RULE_assignment = 11
    RULE_ifStmt = 12
    RULE_whileStmt = 13
    RULE_forStmt = 14
    RULE_returnStmt = 15
    RULE_breakStmt = 16
    RULE_continueStmt = 17
    RULE_expressionStmt = 18
    RULE_expression = 19
    RULE_pipelineExpr = 20
    RULE_logicalOrExpr = 21
    RULE_logicalAndExpr = 22
    RULE_equalityExpr = 23
    RULE_relationalExpr = 24
    RULE_additiveExpr = 25
    RULE_multiplicativeExpr = 26
    RULE_unaryExpr = 27
    RULE_postfixExpr = 28
    RULE_primaryExpr = 29
    RULE_arrayLiteral = 30
    RULE_functionExpr = 31
    RULE_argList = 32

    ruleNames =  [ "program", "constDecl", "funcDecl", "paramList", "param", 
                   "type", "functionType", "atomicType", "blockStmt", "stmt", 
                   "varDecl", "assignment", "ifStmt", "whileStmt", "forStmt", 
                   "returnStmt", "breakStmt", "continueStmt", "expressionStmt", 
                   "expression", "pipelineExpr", "logicalOrExpr", "logicalAndExpr", 
                   "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "postfixExpr", "primaryExpr", "arrayLiteral", 
                   "functionExpr", "argList" ]

    EOF = Token.EOF
    BOOL=1
    BREAK=2
    CONST=3
    CONTINUE=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNC=9
    IF=10
    IN=11
    INT=12
    LET=13
    RETURN=14
    STRING=15
    TRUE=16
    VOID=17
    WHILE=18
    PLUS=19
    MINUS=20
    MULT=21
    DIV=22
    MOD=23
    EQ=24
    NE=25
    LT=26
    LE=27
    GT=28
    GE=29
    AND=30
    OR=31
    NOT=32
    ASSIGN=33
    COLON=34
    ARROW=35
    PIPELINE=36
    LPAREN=37
    RPAREN=38
    LBRACKET=39
    RBRACKET=40
    LBRACE=41
    RBRACE=42
    COMMA=43
    SEMICOLON=44
    DOT=45
    INTLITERAL=46
    FLOATLITERAL=47
    STRINGLITERAL=48
    ID=49
    COMMENT=50
    BLOCK_COMMENT=51
    WS=52
    ILLEGAL_ESCAPE=53
    UNCLOSE_STRING=54
    ERROR_TOKEN=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HLangParser.EOF, 0)

        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(HLangParser.ConstDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(HLangParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_program




    def program(self):

        localctx = HLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==9:
                self.state = 68
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 66
                    self.constDecl()
                    pass
                elif token in [9]:
                    self.state = 67
                    self.funcDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(HLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(HLangParser.CONST, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(HLangParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(HLangParser.TypeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_constDecl




    def constDecl(self):

        localctx = HLangParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_constDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(HLangParser.CONST)
            self.state = 76
            self.match(HLangParser.ID)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 77
                self.match(HLangParser.COLON)
                self.state = 78
                self.type_()


            self.state = 81
            self.match(HLangParser.ASSIGN)
            self.state = 82
            self.expression()
            self.state = 83
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(HLangParser.FUNC, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(HLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HLangParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(HLangParser.TypeContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(HLangParser.BlockStmtContext,0)


        def paramList(self):
            return self.getTypedRuleContext(HLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_funcDecl




    def funcDecl(self):

        localctx = HLangParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(HLangParser.FUNC)
            self.state = 86
            self.match(HLangParser.ID)
            self.state = 87
            self.match(HLangParser.LPAREN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 88
                self.paramList()


            self.state = 91
            self.match(HLangParser.RPAREN)
            self.state = 92
            self.match(HLangParser.ARROW)
            self.state = 93
            self.type_()
            self.state = 94
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(HLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.COMMA)
            else:
                return self.getToken(HLangParser.COMMA, i)

        def getRuleIndex(self):
            return HLangParser.RULE_paramList




    def paramList(self):

        localctx = HLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.param()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 97
                self.match(HLangParser.COMMA)
                self.state = 98
                self.param()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(HLangParser.TypeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_param




    def param(self):

        localctx = HLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(HLangParser.ID)
            self.state = 105
            self.match(HLangParser.COLON)
            self.state = 106
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionType(self):
            return self.getTypedRuleContext(HLangParser.FunctionTypeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_type




    def type_(self):

        localctx = HLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.functionType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomicType(self):
            return self.getTypedRuleContext(HLangParser.AtomicTypeContext,0)


        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def functionType(self):
            return self.getTypedRuleContext(HLangParser.FunctionTypeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_functionType




    def functionType(self):

        localctx = HLangParser.FunctionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.atomicType()
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 111
                self.match(HLangParser.ARROW)
                self.state = 112
                self.functionType()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(HLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(HLangParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(HLangParser.BOOL, 0)

        def STRING(self):
            return self.getToken(HLangParser.STRING, 0)

        def VOID(self):
            return self.getToken(HLangParser.VOID, 0)

        def LBRACKET(self):
            return self.getToken(HLangParser.LBRACKET, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.TypeContext)
            else:
                return self.getTypedRuleContext(HLangParser.TypeContext,i)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def INTLITERAL(self):
            return self.getToken(HLangParser.INTLITERAL, 0)

        def RBRACKET(self):
            return self.getToken(HLangParser.RBRACKET, 0)

        def LPAREN(self):
            return self.getToken(HLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HLangParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.COMMA)
            else:
                return self.getToken(HLangParser.COMMA, i)

        def getRuleIndex(self):
            return HLangParser.RULE_atomicType




    def atomicType(self):

        localctx = HLangParser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(HLangParser.INT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(HLangParser.FLOAT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(HLangParser.BOOL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(HLangParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.match(HLangParser.VOID)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.match(HLangParser.LBRACKET)
                self.state = 121
                self.type_()
                self.state = 122
                self.match(HLangParser.SEMICOLON)
                self.state = 123
                self.match(HLangParser.INTLITERAL)
                self.state = 124
                self.match(HLangParser.RBRACKET)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 126
                self.match(HLangParser.LBRACKET)
                self.state = 127
                self.type_()
                self.state = 128
                self.match(HLangParser.RBRACKET)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 130
                self.match(HLangParser.LPAREN)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 687194935426) != 0):
                    self.state = 131
                    self.type_()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==43:
                        self.state = 132
                        self.match(HLangParser.COMMA)
                        self.state = 133
                        self.type_()
                        self.state = 138
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 141
                self.match(HLangParser.RPAREN)
                self.state = 142
                self.match(HLangParser.ARROW)
                self.state = 143
                self.type_()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 144
                self.match(HLangParser.LPAREN)
                self.state = 145
                self.type_()
                self.state = 146
                self.match(HLangParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(HLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HLangParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(HLangParser.StmtContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_blockStmt




    def blockStmt(self):

        localctx = HLangParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(HLangParser.LBRACE)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1058421677582164) != 0):
                self.state = 151
                self.stmt()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(HLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(HLangParser.VarDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(HLangParser.AssignmentContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(HLangParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(HLangParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(HLangParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(HLangParser.ReturnStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(HLangParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(HLangParser.ContinueStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(HLangParser.BlockStmtContext,0)


        def expressionStmt(self):
            return self.getTypedRuleContext(HLangParser.ExpressionStmtContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_stmt




    def stmt(self):

        localctx = HLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 163
                self.forStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 164
                self.returnStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.breakStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 166
                self.continueStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 167
                self.blockStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 168
                self.expressionStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(HLangParser.LET, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(HLangParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(HLangParser.TypeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_varDecl




    def varDecl(self):

        localctx = HLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(HLangParser.LET)
            self.state = 172
            self.match(HLangParser.ID)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 173
                self.match(HLangParser.COLON)
                self.state = 174
                self.type_()


            self.state = 177
            self.match(HLangParser.ASSIGN)
            self.state = 178
            self.expression()
            self.state = 179
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HLangParser.ExpressionContext,i)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.LBRACKET)
            else:
                return self.getToken(HLangParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.RBRACKET)
            else:
                return self.getToken(HLangParser.RBRACKET, i)

        def getRuleIndex(self):
            return HLangParser.RULE_assignment




    def assignment(self):

        localctx = HLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(HLangParser.ID)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 182
                self.match(HLangParser.LBRACKET)
                self.state = 183
                self.expression()
                self.state = 184
                self.match(HLangParser.RBRACKET)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 191
            self.match(HLangParser.ASSIGN)
            self.state = 192
            self.expression()
            self.state = 193
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.IF)
            else:
                return self.getToken(HLangParser.IF, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.LPAREN)
            else:
                return self.getToken(HLangParser.LPAREN, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HLangParser.ExpressionContext,i)

